<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alanhughjones.studyeasy.NewTaskActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/new_task_toolbar"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/add_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/add_task_done"
        android:layout_alignBottom="@+id/new_task_toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="31dp"
        android:text="@string/new_task"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/add_task_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_new_task"
        android:layout_alignBottom="@+id/add_new_task"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:text="@string/done"
        android:textColor="@color/ctaButtons"
        android:textSize="18sp"
        tools:textAllCaps="false" />

    <TextView
        android:id="@+id/input_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add_new_task"
        android:layout_below="@+id/new_task_toolbar"
        android:layout_marginTop="18dp"
        android:text="@string/task_name_input"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/input_new_task"
        android:layout_below="@+id/input_new_task"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/duedate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add_new_task"
        android:layout_below="@+id/input_task"
        android:layout_marginTop="5dp"
        android:text="@string/duedate_input"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/datepick_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add_new_task"
        android:layout_below="@+id/duedate_title"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/change_date"
        android:textColor="@android:color/background_light"
        tools:textAllCaps="false" />

</RelativeLayout>
